# uwtimeschd

./: .gitignore  LICENSE  README.md  config.json  index.html  main.py  pyproject.toml  range_demo.html  test.py  theme.css  update.py
.github/workflows/: update.yml
data/: config.json  queue.db  schedules.db  schedules.db.01
js/: app.js  constants.js  database.js  service.js  store.js  ui.js  utils.js
management/: chunk_db.py  database_manager.py  fetch.py  pipeline.py  queue_manager.py  utils.py
old/: demo.html  download_libs.py  index.html  migrate_rowid.py  server.py  test.py
old/js/: app.js  database.js  ui.js
old_data/: schedules.db
parse/: clean_schedule.py  debug.py  fetch.py  normalize.py  schedule.py  url_codes.py  verify.py
scrape/: queue_manager.py
